--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,18 @@
   color: #61dafb;
 }
 
+.grid-row {
+    display: flex;
+    justify-content: center;
+}
+
+.grid-col {
+    background-color: lightgrey;
+    border: 1px solid black;
+    width: 50px;
+    height: 50px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
